force-app/main/default/objects/pse__Milestone__c/fields/Contract_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Due_Date__c</fullName>
    <description>Milestone not to exceed due date (ie. Milestone could be billable prior to actual target or approved date per payment terms of a contract)</description>
    <label>Contract Due Date</label>
    <type>Date</type>
</CustomField>