force-app/main/default/objects/pse__Milestone__c/fields/Milestone_Duration__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Duration__c</fullName>
    <formula>pse__Actual_Date__c - pse__Project__r.pse__Start_Date__c</formula>
    <label>Milestone Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>