force-app/main/default/objects/pse__Milestone__c/fields/Milestone_Principal_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Principal_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Principle Consultant for Open Projects</description>
    <label>Milestone Principal Consultant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>PSA Resource</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Milestones (Milestone Principal Consultant)</relationshipLabel>
    <relationshipName>MilestonePrincipal</relationshipName>
    <type>Lookup</type>
</CustomField>