force-app/main/default/objects/pse__Milestone__c/fields/MilestoneAccountID__c.field-meta.xml
<CustomField>
    <fullName>MilestoneAccountID__c</fullName>
    <formula>pse__Project__r.pse__Account__r.Id</formula>
    <label>MilestoneAccountID</label>
    <type>Text</type>
</CustomField>