force-app/main/default/objects/pse__Milestone__c/fields/MilestoneProjectContact__c.field-meta.xml
<CustomField>
    <fullName>MilestoneProjectContact__c</fullName>
    <formula>pse__Project__r.Client_Contact__c</formula>
    <label>MilestoneProjectContact</label>
    <type>Text</type>
</CustomField>