force-app/main/default/objects/pse__Milestone__c/fields/MilestoneProjectPMFullName__c.field-meta.xml
<CustomField>
    <fullName>MilestoneProjectPMFullName__c</fullName>
    <formula>pse__Project__r.pse__Project_Manager__r.FirstName  &amp; &quot; &quot; &amp;  pse__Project__r.pse__Project_Manager__r.LastName</formula>
    <label>MilestoneProjectPMFullName</label>
    <type>Text</type>
</CustomField>