force-app/main/default/objects/pse__Milestone__c/fields/MilestoneProjectPMTitle__c.field-meta.xml
<CustomField>
    <fullName>MilestoneProjectPMTitle__c</fullName>
    <formula>pse__Project__r.pse__Project_Manager__r.Title</formula>
    <label>MilestoneProjectPMTitle</label>
    <type>Text</type>
</CustomField>