force-app/main/default/objects/pse__Milestone__c/recordTypes/Billing_Milestone.recordType-meta.xml
<RecordType>
    <fullName>Billing_Milestone</fullName>
    <active>true</active>
    <description>Use this Milestone only for Billing Milestones. Should only be used for reflecting complicated contracts.</description>
    <label>Billing Milestone</label>
</RecordType>