force-app/main/default/objects/pse__Milestone__c/recordTypes/Project_Management_Milestone.recordType-meta.xml
<RecordType>
    <fullName>Project_Management_Milestone</fullName>
    <active>true</active>
    <description>Please use this Milestone if you are creating Milestones for Project Management only (i.e. not for revenue generating milestones)</description>
    <label>Project Management Milestone</label>
</RecordType>