force-app/main/default/objects/pse__Milestone__c/validationRules/Amount_cannot_be_edited_if_synched.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_cannot_be_edited_if_synched</fullName>
    <active>true</active>
    <description>The milestone amount cannot be edited after it&apos;s synched to NetSuite</description>
    <errorConditionFormula>AND(
  ISCHANGED(pse__Milestone_Amount__c),
  NOT(ISPICKVAL(Invoice_Status__c,&quot;Not-Synced&quot;)),
  NOT($Profile.Id=&quot;00e30000000bvR3&quot;),
  NOT($Profile.Id=&quot;00e50000001BmUZ&quot;),
  NOT($User.Id=&quot;00550000001OhNY&quot;),
  NOT($User.Id=&quot;00550000004DYYT&quot;),
  NOT($User.Id=&quot;00550000004PdIQ&quot;)
)</errorConditionFormula>
    <errorMessage>This milestone has already been synched to NetSuite. Please contact your system administrator to make changes to the amount.</errorMessage>
</ValidationRule>