force-app/main/default/objects/pse__Milestone__c/validationRules/First_two_digits_must_be_numbers.validationRule-meta.xml
<ValidationRule>
    <fullName>First_two_digits_must_be_numbers</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(
   ISNUMBER(LEFT(Name,2))
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>The first two digits of a Milestone must be a number in order to show the sequence of milestones.</errorMessage>
</ValidationRule>