force-app/main/default/objects/pse__Milestone__c/validationRules/If_Milestone_Is_Closed_Populate_Actual.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Milestone_Is_Closed_Populate_Actual</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISCHANGED(pse__Status__c),
   NOT($Profile.Id=&quot;00e50000001BmUZ&quot;),
   NOT($Profile.Id=&quot;00e30000000bvR3&quot;),
   OR(
      ISPICKVAL(pse__Status__c,&quot;Approved&quot;),
      ISPICKVAL(pse__Status__c,&quot;Canceled&quot;)
   ),
   ISBLANK(pse__Actual_Date__c)
)</errorConditionFormula>
    <errorDisplayField>pse__Status__c</errorDisplayField>
    <errorMessage>Please close the Milestone by marking it as &quot;Approved&quot; or &quot;Canceled&quot; if you have an actual date populated.</errorMessage>
</ValidationRule>