force-app/main/default/objects/pse__Milestone__c/validationRules/Project_Management_Milestone_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Management_Milestone_Amount</fullName>
    <active>true</active>
    <description>If a Milestone is of the Project management Record Type, the Amount has to be 0.</description>
    <errorConditionFormula>AND(
  RecordTypeId = &apos;01250000000HrQN&apos;,
  NOT($Profile.Id=&quot;00e30000000bvR3&quot;),
  NOT(pse__Milestone_Amount__c = 0)
)</errorConditionFormula>
    <errorMessage>A Project Management Milestone cannot have an amount associated with it</errorMessage>
</ValidationRule>