force-app/main/default/objects/pse__Milestone__c/validationRules/Project_Mgmt_Milestones_Open_Time_Entry.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Mgmt_Milestones_Open_Time_Entry</fullName>
    <active>true</active>
    <description>Only Project Management Milestones should be open for time entry.</description>
    <errorConditionFormula>AND(
  NOT(RecordType.DeveloperName!=&quot;Project Management Milestone&quot;),
  pse__Closed_for_Time_Entry__c=FALSE,
  NOT($Profile.Id=&quot;00e30000000bvR3&quot;)
)</errorConditionFormula>
    <errorDisplayField>pse__Closed_for_Time_Entry__c</errorDisplayField>
    <errorMessage>Only Project Management Milestones may be open for time entry.</errorMessage>
</ValidationRule>